[package]
name = "tibitset"
version = "0.1.0"
authors = ["Xavier Bestel <xav@bes.tel>"]
license = "MIT/Apache-2.0"
readme = "README.md"

description = "TiBitSet is a simple bitset replacement for HashSet"
documentation = "https://docs.rs/tibitset/"
repository = "https://github.com/bestouff/tibitset"

keywords = ["container", "bitvec", "bitset", "hashset", "no_std"]
categories = ["data-structures"]

[features]
std = []
default = ["std"]

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"
